2_Parser/y.output
Terminals which are not used

   THEN
   ERROR


State 103 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: declaration_list

    2 declaration_list: declaration_list declaration
    3                 | declaration

    4 declaration: var_declaration
    5            | func_declaration

    6 id: ID

    7 num: NUM

    8 var_declaration: type_specifier id SEMI
    9                | type_specifier id LBRACE num RBRACE SEMI

   10 type_specifier: INT
   11               | VOID

   12 @1: /* empty */

   13 func_declaration: type_specifier id @1 LPAREN params RPAREN compound_stmt

   14 params: param_list
   15       | VOID

   16 param_list: param_list COMMA param
   17           | param

   18 param: type_specifier id
   19      | type_specifier id LBRACE RBRACE

   20 compound_stmt: LCURLY local_declarations statement_list RCURLY

   21 local_declarations: local_declarations var_declaration
   22                   | /* empty */

   23 statement_list: statement_list statement
   24               | /* empty */

   25 statement: expression_stmt
   26          | compound_stmt
   27          | selection_stmt
   28          | iteration_stmt
   29          | return_stmt

   30 expression_stmt: expression SEMI
   31                | SEMI

   32 selection_stmt: IF LPAREN expression RPAREN statement
   33               | IF LPAREN expression RPAREN statement ELSE statement

   34 iteration_stmt: WHILE LPAREN expression RPAREN statement

   35 return_stmt: RETURN SEMI
   36            | RETURN expression SEMI

   37 expression: var ASSIGN expression
   38           | simple_expression

   39 var: id

   40 @2: /* empty */

   41 var: id @2 LBRACE expression RBRACE

   42 simple_expression: additive_expression EQ additive_expression
   43                  | additive_expression NE additive_expression
   44                  | additive_expression LT additive_expression
   45                  | additive_expression LE additive_expression
   46                  | additive_expression GT additive_expression
   47                  | additive_expression GE additive_expression
   48                  | additive_expression

   49 additive_expression: additive_expression PLUS term
   50                    | additive_expression MINUS term
   51                    | term

   52 term: term TIMES factor
   53     | term OVER factor
   54     | factor

   55 factor: LPAREN expression RPAREN
   56       | var
   57       | call
   58       | NUM

   59 @3: /* empty */

   60 call: id @3 LPAREN args RPAREN

   61 args: arg_list
   62     | /* empty */

   63 arg_list: arg_list COMMA expression
   64         | expression


Terminals, with rules where they appear

$end (0) 0
error (256)
IF (258) 32 33
THEN (259)
ELSE (260) 33
WHILE (261) 34
RETURN (262) 35 36
INT (263) 10
VOID (264) 11 15
ID (265) 6
NUM (266) 7 58
ASSIGN (267) 37
EQ (268) 42
NE (269) 43
LT (270) 44
LE (271) 45
GT (272) 46
GE (273) 47
PLUS (274) 49
MINUS (275) 50
TIMES (276) 52
OVER (277) 53
LPAREN (278) 13 32 33 34 55 60
RPAREN (279) 13 32 33 34 55 60
LBRACE (280) 9 19 41
RBRACE (281) 9 19 41
LCURLY (282) 20
RCURLY (283) 20
SEMI (284) 8 9 30 31 35 36
COMMA (285) 16 63
ERROR (286)


Nonterminals, with rules where they appear

$accept (32)
    on left: 0
program (33)
    on left: 1, on right: 0
declaration_list (34)
    on left: 2 3, on right: 1 2
declaration (35)
    on left: 4 5, on right: 2 3
id (36)
    on left: 6, on right: 8 9 13 18 19 39 41 60
num (37)
    on left: 7, on right: 9
var_declaration (38)
    on left: 8 9, on right: 4 21
type_specifier (39)
    on left: 10 11, on right: 8 9 13 18 19
func_declaration (40)
    on left: 13, on right: 5
@1 (41)
    on left: 12, on right: 13
params (42)
    on left: 14 15, on right: 13
param_list (43)
    on left: 16 17, on right: 14 16
param (44)
    on left: 18 19, on right: 16 17
compound_stmt (45)
    on left: 20, on right: 13 26
local_declarations (46)
    on left: 21 22, on right: 20 21
statement_list (47)
    on left: 23 24, on right: 20 23
statement (48)
    on left: 25 26 27 28 29, on right: 23 32 33 34
expression_stmt (49)
    on left: 30 31, on right: 25
selection_stmt (50)
    on left: 32 33, on right: 27
iteration_stmt (51)
    on left: 34, on right: 28
return_stmt (52)
    on left: 35 36, on right: 29
expression (53)
    on left: 37 38, on right: 30 32 33 34 36 37 41 55 63 64
var (54)
    on left: 39 41, on right: 37 56
@2 (55)
    on left: 40, on right: 41
simple_expression (56)
    on left: 42 43 44 45 46 47 48, on right: 38
additive_expression (57)
    on left: 49 50 51, on right: 42 43 44 45 46 47 48 49 50
term (58)
    on left: 52 53 54, on right: 49 50 51 52 53
factor (59)
    on left: 55 56 57 58, on right: 52 53 54
call (60)
    on left: 60, on right: 57
@3 (61)
    on left: 59, on right: 60
args (62)
    on left: 61 62, on right: 60
arg_list (63)
    on left: 63 64, on right: 61 63


state 0

    0 $accept: . program $end

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    program           go to state 3
    declaration_list  go to state 4
    declaration       go to state 5
    var_declaration   go to state 6
    type_specifier    go to state 7
    func_declaration  go to state 8


state 1

   10 type_specifier: INT .

    $default  reduce using rule 10 (type_specifier)


state 2

   11 type_specifier: VOID .

    $default  reduce using rule 11 (type_specifier)


state 3

    0 $accept: program . $end

    $end  shift, and go to state 9


state 4

    1 program: declaration_list .
    2 declaration_list: declaration_list . declaration

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    $default  reduce using rule 1 (program)

    declaration       go to state 10
    var_declaration   go to state 6
    type_specifier    go to state 7
    func_declaration  go to state 8


state 5

    3 declaration_list: declaration .

    $default  reduce using rule 3 (declaration_list)


state 6

    4 declaration: var_declaration .

    $default  reduce using rule 4 (declaration)


state 7

    8 var_declaration: type_specifier . id SEMI
    9                | type_specifier . id LBRACE num RBRACE SEMI
   13 func_declaration: type_specifier . id @1 LPAREN params RPAREN compound_stmt

    ID  shift, and go to state 11

    id  go to state 12


state 8

    5 declaration: func_declaration .

    $default  reduce using rule 5 (declaration)


state 9

    0 $accept: program $end .

    $default  accept


state 10

    2 declaration_list: declaration_list declaration .

    $default  reduce using rule 2 (declaration_list)


state 11

    6 id: ID .

    $default  reduce using rule 6 (id)


state 12

    8 var_declaration: type_specifier id . SEMI
    9                | type_specifier id . LBRACE num RBRACE SEMI
   13 func_declaration: type_specifier id . @1 LPAREN params RPAREN compound_stmt

    LBRACE  shift, and go to state 13
    SEMI    shift, and go to state 14

    $default  reduce using rule 12 (@1)

    @1  go to state 15


state 13

    9 var_declaration: type_specifier id LBRACE . num RBRACE SEMI

    NUM  shift, and go to state 16

    num  go to state 17


state 14

    8 var_declaration: type_specifier id SEMI .

    $default  reduce using rule 8 (var_declaration)


state 15

   13 func_declaration: type_specifier id @1 . LPAREN params RPAREN compound_stmt

    LPAREN  shift, and go to state 18


state 16

    7 num: NUM .

    $default  reduce using rule 7 (num)


state 17

    9 var_declaration: type_specifier id LBRACE num . RBRACE SEMI

    RBRACE  shift, and go to state 19


state 18

   13 func_declaration: type_specifier id @1 LPAREN . params RPAREN compound_stmt

    INT   shift, and go to state 1
    VOID  shift, and go to state 20

    type_specifier  go to state 21
    params          go to state 22
    param_list      go to state 23
    param           go to state 24


state 19

    9 var_declaration: type_specifier id LBRACE num RBRACE . SEMI

    SEMI  shift, and go to state 25


state 20

   11 type_specifier: VOID .
   15 params: VOID .

    RPAREN    reduce using rule 15 (params)
    $default  reduce using rule 11 (type_specifier)


state 21

   18 param: type_specifier . id
   19      | type_specifier . id LBRACE RBRACE

    ID  shift, and go to state 11

    id  go to state 26


state 22

   13 func_declaration: type_specifier id @1 LPAREN params . RPAREN compound_stmt

    RPAREN  shift, and go to state 27


state 23

   14 params: param_list .
   16 param_list: param_list . COMMA param

    COMMA  shift, and go to state 28

    $default  reduce using rule 14 (params)


state 24

   17 param_list: param .

    $default  reduce using rule 17 (param_list)


state 25

    9 var_declaration: type_specifier id LBRACE num RBRACE SEMI .

    $default  reduce using rule 9 (var_declaration)


state 26

   18 param: type_specifier id .
   19      | type_specifier id . LBRACE RBRACE

    LBRACE  shift, and go to state 29

    $default  reduce using rule 18 (param)


state 27

   13 func_declaration: type_specifier id @1 LPAREN params RPAREN . compound_stmt

    LCURLY  shift, and go to state 30

    compound_stmt  go to state 31


state 28

   16 param_list: param_list COMMA . param

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    type_specifier  go to state 21
    param           go to state 32


state 29

   19 param: type_specifier id LBRACE . RBRACE

    RBRACE  shift, and go to state 33


state 30

   20 compound_stmt: LCURLY . local_declarations statement_list RCURLY

    $default  reduce using rule 22 (local_declarations)

    local_declarations  go to state 34


state 31

   13 func_declaration: type_specifier id @1 LPAREN params RPAREN compound_stmt .

    $default  reduce using rule 13 (func_declaration)


state 32

   16 param_list: param_list COMMA param .

    $default  reduce using rule 16 (param_list)


state 33

   19 param: type_specifier id LBRACE RBRACE .

    $default  reduce using rule 19 (param)


state 34

   20 compound_stmt: LCURLY local_declarations . statement_list RCURLY
   21 local_declarations: local_declarations . var_declaration

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    $default  reduce using rule 24 (statement_list)

    var_declaration  go to state 35
    type_specifier   go to state 36
    statement_list   go to state 37


state 35

   21 local_declarations: local_declarations var_declaration .

    $default  reduce using rule 21 (local_declarations)


state 36

    8 var_declaration: type_specifier . id SEMI
    9                | type_specifier . id LBRACE num RBRACE SEMI

    ID  shift, and go to state 11

    id  go to state 38


state 37

   20 compound_stmt: LCURLY local_declarations statement_list . RCURLY
   23 statement_list: statement_list . statement

    IF      shift, and go to state 39
    WHILE   shift, and go to state 40
    RETURN  shift, and go to state 41
    ID      shift, and go to state 11
    NUM     shift, and go to state 42
    LPAREN  shift, and go to state 43
    LCURLY  shift, and go to state 30
    RCURLY  shift, and go to state 44
    SEMI    shift, and go to state 45

    id                   go to state 46
    compound_stmt        go to state 47
    statement            go to state 48
    expression_stmt      go to state 49
    selection_stmt       go to state 50
    iteration_stmt       go to state 51
    return_stmt          go to state 52
    expression           go to state 53
    var                  go to state 54
    simple_expression    go to state 55
    additive_expression  go to state 56
    term                 go to state 57
    factor               go to state 58
    call                 go to state 59


state 38

    8 var_declaration: type_specifier id . SEMI
    9                | type_specifier id . LBRACE num RBRACE SEMI

    LBRACE  shift, and go to state 13
    SEMI    shift, and go to state 14


state 39

   32 selection_stmt: IF . LPAREN expression RPAREN statement
   33               | IF . LPAREN expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 60


state 40

   34 iteration_stmt: WHILE . LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 61


state 41

   35 return_stmt: RETURN . SEMI
   36            | RETURN . expression SEMI

    ID      shift, and go to state 11
    NUM     shift, and go to state 42
    LPAREN  shift, and go to state 43
    SEMI    shift, and go to state 62

    id                   go to state 46
    expression           go to state 63
    var                  go to state 54
    simple_expression    go to state 55
    additive_expression  go to state 56
    term                 go to state 57
    factor               go to state 58
    call                 go to state 59


state 42

   58 factor: NUM .

    $default  reduce using rule 58 (factor)


state 43

   55 factor: LPAREN . expression RPAREN

    ID      shift, and go to state 11
    NUM     shift, and go to state 42
    LPAREN  shift, and go to state 43

    id                   go to state 46
    expression           go to state 64
    var                  go to state 54
    simple_expression    go to state 55
    additive_expression  go to state 56
    term                 go to state 57
    factor               go to state 58
    call                 go to state 59


state 44

   20 compound_stmt: LCURLY local_declarations statement_list RCURLY .

    $default  reduce using rule 20 (compound_stmt)


state 45

   31 expression_stmt: SEMI .

    $default  reduce using rule 31 (expression_stmt)


state 46

   39 var: id .
   41    | id . @2 LBRACE expression RBRACE
   60 call: id . @3 LPAREN args RPAREN

    LPAREN    reduce using rule 59 (@3)
    LBRACE    reduce using rule 40 (@2)
    $default  reduce using rule 39 (var)

    @2  go to state 65
    @3  go to state 66


state 47

   26 statement: compound_stmt .

    $default  reduce using rule 26 (statement)


state 48

   23 statement_list: statement_list statement .

    $default  reduce using rule 23 (statement_list)


state 49

   25 statement: expression_stmt .

    $default  reduce using rule 25 (statement)


state 50

   27 statement: selection_stmt .

    $default  reduce using rule 27 (statement)


state 51

   28 statement: iteration_stmt .

    $default  reduce using rule 28 (statement)


state 52

   29 statement: return_stmt .

    $default  reduce using rule 29 (statement)


state 53

   30 expression_stmt: expression . SEMI

    SEMI  shift, and go to state 67


state 54

   37 expression: var . ASSIGN expression
   56 factor: var .

    ASSIGN  shift, and go to state 68

    $default  reduce using rule 56 (factor)


state 55

   38 expression: simple_expression .

    $default  reduce using rule 38 (expression)


state 56

   42 simple_expression: additive_expression . EQ additive_expression
   43                  | additive_expression . NE additive_expression
   44                  | additive_expression . LT additive_expression
   45                  | additive_expression . LE additive_expression
   46                  | additive_expression . GT additive_expression
   47                  | additive_expression . GE additive_expression
   48                  | additive_expression .
   49 additive_expression: additive_expression . PLUS term
   50                    | additive_expression . MINUS term

    EQ     shift, and go to state 69
    NE     shift, and go to state 70
    LT     shift, and go to state 71
    LE     shift, and go to state 72
    GT     shift, and go to state 73
    GE     shift, and go to state 74
    PLUS   shift, and go to state 75
    MINUS  shift, and go to state 76

    $default  reduce using rule 48 (simple_expression)


state 57

   51 additive_expression: term .
   52 term: term . TIMES factor
   53     | term . OVER factor

    TIMES  shift, and go to state 77
    OVER   shift, and go to state 78

    $default  reduce using rule 51 (additive_expression)


state 58

   54 term: factor .

    $default  reduce using rule 54 (term)


state 59

   57 factor: call .

    $default  reduce using rule 57 (factor)


state 60

   32 selection_stmt: IF LPAREN . expression RPAREN statement
   33               | IF LPAREN . expression RPAREN statement ELSE statement

    ID      shift, and go to state 11
    NUM     shift, and go to state 42
    LPAREN  shift, and go to state 43

    id                   go to state 46
    expression           go to state 79
    var                  go to state 54
    simple_expression    go to state 55
    additive_expression  go to state 56
    term                 go to state 57
    factor               go to state 58
    call                 go to state 59


state 61

   34 iteration_stmt: WHILE LPAREN . expression RPAREN statement

    ID      shift, and go to state 11
    NUM     shift, and go to state 42
    LPAREN  shift, and go to state 43

    id                   go to state 46
    expression           go to state 80
    var                  go to state 54
    simple_expression    go to state 55
    additive_expression  go to state 56
    term                 go to state 57
    factor               go to state 58
    call                 go to state 59


state 62

   35 return_stmt: RETURN SEMI .

    $default  reduce using rule 35 (return_stmt)


state 63

   36 return_stmt: RETURN expression . SEMI

    SEMI  shift, and go to state 81


state 64

   55 factor: LPAREN expression . RPAREN

    RPAREN  shift, and go to state 82


state 65

   41 var: id @2 . LBRACE expression RBRACE

    LBRACE  shift, and go to state 83


state 66

   60 call: id @3 . LPAREN args RPAREN

    LPAREN  shift, and go to state 84


state 67

   30 expression_stmt: expression SEMI .

    $default  reduce using rule 30 (expression_stmt)


state 68

   37 expression: var ASSIGN . expression

    ID      shift, and go to state 11
    NUM     shift, and go to state 42
    LPAREN  shift, and go to state 43

    id                   go to state 46
    expression           go to state 85
    var                  go to state 54
    simple_expression    go to state 55
    additive_expression  go to state 56
    term                 go to state 57
    factor               go to state 58
    call                 go to state 59


state 69

   42 simple_expression: additive_expression EQ . additive_expression

    ID      shift, and go to state 11
    NUM     shift, and go to state 42
    LPAREN  shift, and go to state 43

    id                   go to state 46
    var                  go to state 86
    additive_expression  go to state 87
    term                 go to state 57
    factor               go to state 58
    call                 go to state 59


state 70

   43 simple_expression: additive_expression NE . additive_expression

    ID      shift, and go to state 11
    NUM     shift, and go to state 42
    LPAREN  shift, and go to state 43

    id                   go to state 46
    var                  go to state 86
    additive_expression  go to state 88
    term                 go to state 57
    factor               go to state 58
    call                 go to state 59


state 71

   44 simple_expression: additive_expression LT . additive_expression

    ID      shift, and go to state 11
    NUM     shift, and go to state 42
    LPAREN  shift, and go to state 43

    id                   go to state 46
    var                  go to state 86
    additive_expression  go to state 89
    term                 go to state 57
    factor               go to state 58
    call                 go to state 59


state 72

   45 simple_expression: additive_expression LE . additive_expression

    ID      shift, and go to state 11
    NUM     shift, and go to state 42
    LPAREN  shift, and go to state 43

    id                   go to state 46
    var                  go to state 86
    additive_expression  go to state 90
    term                 go to state 57
    factor               go to state 58
    call                 go to state 59


state 73

   46 simple_expression: additive_expression GT . additive_expression

    ID      shift, and go to state 11
    NUM     shift, and go to state 42
    LPAREN  shift, and go to state 43

    id                   go to state 46
    var                  go to state 86
    additive_expression  go to state 91
    term                 go to state 57
    factor               go to state 58
    call                 go to state 59


state 74

   47 simple_expression: additive_expression GE . additive_expression

    ID      shift, and go to state 11
    NUM     shift, and go to state 42
    LPAREN  shift, and go to state 43

    id                   go to state 46
    var                  go to state 86
    additive_expression  go to state 92
    term                 go to state 57
    factor               go to state 58
    call                 go to state 59


state 75

   49 additive_expression: additive_expression PLUS . term

    ID      shift, and go to state 11
    NUM     shift, and go to state 42
    LPAREN  shift, and go to state 43

    id      go to state 46
    var     go to state 86
    term    go to state 93
    factor  go to state 58
    call    go to state 59


state 76

   50 additive_expression: additive_expression MINUS . term

    ID      shift, and go to state 11
    NUM     shift, and go to state 42
    LPAREN  shift, and go to state 43

    id      go to state 46
    var     go to state 86
    term    go to state 94
    factor  go to state 58
    call    go to state 59


state 77

   52 term: term TIMES . factor

    ID      shift, and go to state 11
    NUM     shift, and go to state 42
    LPAREN  shift, and go to state 43

    id      go to state 46
    var     go to state 86
    factor  go to state 95
    call    go to state 59


state 78

   53 term: term OVER . factor

    ID      shift, and go to state 11
    NUM     shift, and go to state 42
    LPAREN  shift, and go to state 43

    id      go to state 46
    var     go to state 86
    factor  go to state 96
    call    go to state 59


state 79

   32 selection_stmt: IF LPAREN expression . RPAREN statement
   33               | IF LPAREN expression . RPAREN statement ELSE statement

    RPAREN  shift, and go to state 97


state 80

   34 iteration_stmt: WHILE LPAREN expression . RPAREN statement

    RPAREN  shift, and go to state 98


state 81

   36 return_stmt: RETURN expression SEMI .

    $default  reduce using rule 36 (return_stmt)


state 82

   55 factor: LPAREN expression RPAREN .

    $default  reduce using rule 55 (factor)


state 83

   41 var: id @2 LBRACE . expression RBRACE

    ID      shift, and go to state 11
    NUM     shift, and go to state 42
    LPAREN  shift, and go to state 43

    id                   go to state 46
    expression           go to state 99
    var                  go to state 54
    simple_expression    go to state 55
    additive_expression  go to state 56
    term                 go to state 57
    factor               go to state 58
    call                 go to state 59


state 84

   60 call: id @3 LPAREN . args RPAREN

    ID      shift, and go to state 11
    NUM     shift, and go to state 42
    LPAREN  shift, and go to state 43

    $default  reduce using rule 62 (args)

    id                   go to state 46
    expression           go to state 100
    var                  go to state 54
    simple_expression    go to state 55
    additive_expression  go to state 56
    term                 go to state 57
    factor               go to state 58
    call                 go to state 59
    args                 go to state 101
    arg_list             go to state 102


state 85

   37 expression: var ASSIGN expression .

    $default  reduce using rule 37 (expression)


state 86

   56 factor: var .

    $default  reduce using rule 56 (factor)


state 87

   42 simple_expression: additive_expression EQ additive_expression .
   49 additive_expression: additive_expression . PLUS term
   50                    | additive_expression . MINUS term

    PLUS   shift, and go to state 75
    MINUS  shift, and go to state 76

    $default  reduce using rule 42 (simple_expression)


state 88

   43 simple_expression: additive_expression NE additive_expression .
   49 additive_expression: additive_expression . PLUS term
   50                    | additive_expression . MINUS term

    PLUS   shift, and go to state 75
    MINUS  shift, and go to state 76

    $default  reduce using rule 43 (simple_expression)


state 89

   44 simple_expression: additive_expression LT additive_expression .
   49 additive_expression: additive_expression . PLUS term
   50                    | additive_expression . MINUS term

    PLUS   shift, and go to state 75
    MINUS  shift, and go to state 76

    $default  reduce using rule 44 (simple_expression)


state 90

   45 simple_expression: additive_expression LE additive_expression .
   49 additive_expression: additive_expression . PLUS term
   50                    | additive_expression . MINUS term

    PLUS   shift, and go to state 75
    MINUS  shift, and go to state 76

    $default  reduce using rule 45 (simple_expression)


state 91

   46 simple_expression: additive_expression GT additive_expression .
   49 additive_expression: additive_expression . PLUS term
   50                    | additive_expression . MINUS term

    PLUS   shift, and go to state 75
    MINUS  shift, and go to state 76

    $default  reduce using rule 46 (simple_expression)


state 92

   47 simple_expression: additive_expression GE additive_expression .
   49 additive_expression: additive_expression . PLUS term
   50                    | additive_expression . MINUS term

    PLUS   shift, and go to state 75
    MINUS  shift, and go to state 76

    $default  reduce using rule 47 (simple_expression)


state 93

   49 additive_expression: additive_expression PLUS term .
   52 term: term . TIMES factor
   53     | term . OVER factor

    TIMES  shift, and go to state 77
    OVER   shift, and go to state 78

    $default  reduce using rule 49 (additive_expression)


state 94

   50 additive_expression: additive_expression MINUS term .
   52 term: term . TIMES factor
   53     | term . OVER factor

    TIMES  shift, and go to state 77
    OVER   shift, and go to state 78

    $default  reduce using rule 50 (additive_expression)


state 95

   52 term: term TIMES factor .

    $default  reduce using rule 52 (term)


state 96

   53 term: term OVER factor .

    $default  reduce using rule 53 (term)


state 97

   32 selection_stmt: IF LPAREN expression RPAREN . statement
   33               | IF LPAREN expression RPAREN . statement ELSE statement

    IF      shift, and go to state 39
    WHILE   shift, and go to state 40
    RETURN  shift, and go to state 41
    ID      shift, and go to state 11
    NUM     shift, and go to state 42
    LPAREN  shift, and go to state 43
    LCURLY  shift, and go to state 30
    SEMI    shift, and go to state 45

    id                   go to state 46
    compound_stmt        go to state 47
    statement            go to state 103
    expression_stmt      go to state 49
    selection_stmt       go to state 50
    iteration_stmt       go to state 51
    return_stmt          go to state 52
    expression           go to state 53
    var                  go to state 54
    simple_expression    go to state 55
    additive_expression  go to state 56
    term                 go to state 57
    factor               go to state 58
    call                 go to state 59


state 98

   34 iteration_stmt: WHILE LPAREN expression RPAREN . statement

    IF      shift, and go to state 39
    WHILE   shift, and go to state 40
    RETURN  shift, and go to state 41
    ID      shift, and go to state 11
    NUM     shift, and go to state 42
    LPAREN  shift, and go to state 43
    LCURLY  shift, and go to state 30
    SEMI    shift, and go to state 45

    id                   go to state 46
    compound_stmt        go to state 47
    statement            go to state 104
    expression_stmt      go to state 49
    selection_stmt       go to state 50
    iteration_stmt       go to state 51
    return_stmt          go to state 52
    expression           go to state 53
    var                  go to state 54
    simple_expression    go to state 55
    additive_expression  go to state 56
    term                 go to state 57
    factor               go to state 58
    call                 go to state 59


state 99

   41 var: id @2 LBRACE expression . RBRACE

    RBRACE  shift, and go to state 105


state 100

   64 arg_list: expression .

    $default  reduce using rule 64 (arg_list)


state 101

   60 call: id @3 LPAREN args . RPAREN

    RPAREN  shift, and go to state 106


state 102

   61 args: arg_list .
   63 arg_list: arg_list . COMMA expression

    COMMA  shift, and go to state 107

    $default  reduce using rule 61 (args)


state 103

   32 selection_stmt: IF LPAREN expression RPAREN statement .
   33               | IF LPAREN expression RPAREN statement . ELSE statement

    ELSE  shift, and go to state 108

    ELSE      [reduce using rule 32 (selection_stmt)]
    $default  reduce using rule 32 (selection_stmt)


state 104

   34 iteration_stmt: WHILE LPAREN expression RPAREN statement .

    $default  reduce using rule 34 (iteration_stmt)


state 105

   41 var: id @2 LBRACE expression RBRACE .
